include/codata_constants_2018.h

ADD_IMPORT extern const double FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018;/**< W m^2 sr^-1 */
ADD_IMPORT extern const double U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018;/**< W m^2 sr^-1 */
ADD_IMPORT extern const double HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double U_HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double HARTREE_ENERGY_2018;/**< J */
ADD_IMPORT extern const double U_HARTREE_ENERGY_2018;/**< J */
ADD_IMPORT extern const double HARTREE_ENERGY_IN_EV_2018;/**< eV */
ADD_IMPORT extern const double U_HARTREE_ENERGY_IN_EV_2018;/**< eV */
ADD_IMPORT extern const double HARTREE_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double U_HARTREE_HERTZ_RELATIONSHIP_2018;/**< Hz */
ADD_IMPORT extern const double HARTREE_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_HARTREE_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double HARTREE_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double U_HARTREE_JOULE_RELATIONSHIP_2018;/**< J */
ADD_IMPORT extern const double HARTREE_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double U_HARTREE_KELVIN_RELATIONSHIP_2018;/**< K */
ADD_IMPORT extern const double HARTREE_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double U_HARTREE_KILOGRAM_RELATIONSHIP_2018;/**< kg */
ADD_IMPORT extern const double HELION_ELECTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_HELION_ELECTRON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double HELION_G_FACTOR_2018;/**<  */
ADD_IMPORT extern const double U_HELION_G_FACTOR_2018;/**<  */
ADD_IMPORT extern const double HELION_MAG__MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double U_HELION_MAG__MOM_2018;/**< J T^-1 */
ADD_IMPORT extern const double HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018;/**<  */
ADD_IMPORT extern const double HELION_MASS_2018;/**< kg */
ADD_IMPORT extern const double U_HELION_MASS_2018;/**< kg */
ADD_IMPORT extern const double HELION_MASS_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double U_HELION_MASS_ENERGY_EQUIVALENT_2018;/**< J */
ADD_IMPORT extern const double HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018;/**< MeV */
ADD_IMPORT extern const double HELION_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double U_HELION_MASS_IN_U_2018;/**< u */
ADD_IMPORT extern const double HELION_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double U_HELION_MOLAR_MASS_2018;/**< kg mol^-1 */
ADD_IMPORT extern const double HELION_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double U_HELION_PROTON_MASS_RATIO_2018;/**<  */
ADD_IMPORT extern const double HELION_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double U_HELION_RELATIVE_ATOMIC_MASS_2018;/**<  */
ADD_IMPORT extern const double HELION_SHIELDING_SHIFT_2018;/**<  */
ADD_IMPORT extern const double U_HELION_SHIELDING_SHIFT_2018;/**<  */
ADD_IMPORT extern const double HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;/**< u */
ADD_IMPORT extern const double HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double U_HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018;/**< eV */
ADD_IMPORT extern const double HERTZ_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double U_HERTZ_HARTREE_RELATIONSHIP_2018;/**< E_h */
ADD_IMPORT extern const double HERTZ_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */
ADD_IMPORT extern const double U_HERTZ_INVERSE_METER_RELATIONSHIP_2018;/**< m^-1 */