src/codata_constants_2018.f90


real(c_double), protected, public, bind(C,name="FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018"):: &
capi_126_2018=FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018
real(c_double), protected, public, bind(C,name="U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018") :: &
capi_U_126_2018=U_FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2018

real(real64), parameter, public :: HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=2.92126232205d-8 !! u
real(real64), parameter, public :: U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=0.00000000088d-8 !! u

real(c_double), protected, public, bind(C,name="HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018"):: &
capi_127_2018=HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018") :: &
capi_U_127_2018=U_HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2018

real(real64), parameter, public :: HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018=27.211386245988d0 !! eV
real(real64), parameter, public :: U_HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018=0.000000000053d0 !! eV

real(c_double), protected, public, bind(C,name="HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018"):: &
capi_128_2018=HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018") :: &
capi_U_128_2018=U_HARTREE_ELECTRON_VOLT_RELATIONSHIP_2018

real(real64), parameter, public :: HARTREE_ENERGY_2018=4.3597447222071d-18 !! J
real(real64), parameter, public :: U_HARTREE_ENERGY_2018=0.0000000000085d-18 !! J

real(c_double), protected, public, bind(C,name="HARTREE_ENERGY_2018"):: &
capi_129_2018=HARTREE_ENERGY_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_ENERGY_2018") :: &
capi_U_129_2018=U_HARTREE_ENERGY_2018

real(real64), parameter, public :: HARTREE_ENERGY_IN_EV_2018=27.211386245988d0 !! eV
real(real64), parameter, public :: U_HARTREE_ENERGY_IN_EV_2018=0.000000000053d0 !! eV

real(c_double), protected, public, bind(C,name="HARTREE_ENERGY_IN_EV_2018"):: &
capi_130_2018=HARTREE_ENERGY_IN_EV_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_ENERGY_IN_EV_2018") :: &
capi_U_130_2018=U_HARTREE_ENERGY_IN_EV_2018

real(real64), parameter, public :: HARTREE_HERTZ_RELATIONSHIP_2018=6.579683920502d15 !! Hz
real(real64), parameter, public :: U_HARTREE_HERTZ_RELATIONSHIP_2018=0.000000000013d15 !! Hz

real(c_double), protected, public, bind(C,name="HARTREE_HERTZ_RELATIONSHIP_2018"):: &
capi_131_2018=HARTREE_HERTZ_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_HERTZ_RELATIONSHIP_2018") :: &
capi_U_131_2018=U_HARTREE_HERTZ_RELATIONSHIP_2018

real(real64), parameter, public :: HARTREE_INVERSE_METER_RELATIONSHIP_2018=2.1947463136320d7 !! m^-1
real(real64), parameter, public :: U_HARTREE_INVERSE_METER_RELATIONSHIP_2018=0.0000000000043d7 !! m^-1

real(c_double), protected, public, bind(C,name="HARTREE_INVERSE_METER_RELATIONSHIP_2018"):: &
capi_132_2018=HARTREE_INVERSE_METER_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_INVERSE_METER_RELATIONSHIP_2018") :: &
capi_U_132_2018=U_HARTREE_INVERSE_METER_RELATIONSHIP_2018

real(real64), parameter, public :: HARTREE_JOULE_RELATIONSHIP_2018=4.3597447222071d-18 !! J
real(real64), parameter, public :: U_HARTREE_JOULE_RELATIONSHIP_2018=0.0000000000085d-18 !! J

real(c_double), protected, public, bind(C,name="HARTREE_JOULE_RELATIONSHIP_2018"):: &
capi_133_2018=HARTREE_JOULE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_JOULE_RELATIONSHIP_2018") :: &
capi_U_133_2018=U_HARTREE_JOULE_RELATIONSHIP_2018

real(real64), parameter, public :: HARTREE_KELVIN_RELATIONSHIP_2018=3.1577502480407d5 !! K
real(real64), parameter, public :: U_HARTREE_KELVIN_RELATIONSHIP_2018=0.0000000000061d5 !! K

real(c_double), protected, public, bind(C,name="HARTREE_KELVIN_RELATIONSHIP_2018"):: &
capi_134_2018=HARTREE_KELVIN_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_KELVIN_RELATIONSHIP_2018") :: &
capi_U_134_2018=U_HARTREE_KELVIN_RELATIONSHIP_2018

real(real64), parameter, public :: HARTREE_KILOGRAM_RELATIONSHIP_2018=4.8508702095432d-35 !! kg
real(real64), parameter, public :: U_HARTREE_KILOGRAM_RELATIONSHIP_2018=0.0000000000094d-35 !! kg

real(c_double), protected, public, bind(C,name="HARTREE_KILOGRAM_RELATIONSHIP_2018"):: &
capi_135_2018=HARTREE_KILOGRAM_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HARTREE_KILOGRAM_RELATIONSHIP_2018") :: &
capi_U_135_2018=U_HARTREE_KILOGRAM_RELATIONSHIP_2018

real(real64), parameter, public :: HELION_ELECTRON_MASS_RATIO_2018=5495.88528007d0 !! 
real(real64), parameter, public :: U_HELION_ELECTRON_MASS_RATIO_2018=0.00000024d0 !! 

real(c_double), protected, public, bind(C,name="HELION_ELECTRON_MASS_RATIO_2018"):: &
capi_136_2018=HELION_ELECTRON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_HELION_ELECTRON_MASS_RATIO_2018") :: &
capi_U_136_2018=U_HELION_ELECTRON_MASS_RATIO_2018

real(real64), parameter, public :: HELION_G_FACTOR_2018=-4.255250615d0 !! 
real(real64), parameter, public :: U_HELION_G_FACTOR_2018=0.000000050d0 !! 

real(c_double), protected, public, bind(C,name="HELION_G_FACTOR_2018"):: &
capi_137_2018=HELION_G_FACTOR_2018
real(c_double), protected, public, bind(C,name="U_HELION_G_FACTOR_2018") :: &
capi_U_137_2018=U_HELION_G_FACTOR_2018

real(real64), parameter, public :: HELION_MAG__MOM_2018=-1.074617532d-26 !! J T^-1
real(real64), parameter, public :: U_HELION_MAG__MOM_2018=0.000000013d-26 !! J T^-1

real(c_double), protected, public, bind(C,name="HELION_MAG__MOM_2018"):: &
capi_138_2018=HELION_MAG__MOM_2018
real(c_double), protected, public, bind(C,name="U_HELION_MAG__MOM_2018") :: &
capi_U_138_2018=U_HELION_MAG__MOM_2018

real(real64), parameter, public :: HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018=-1.158740958d-3 !! 
real(real64), parameter, public :: U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018=0.000000014d-3 !! 

real(c_double), protected, public, bind(C,name="HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018"):: &
capi_139_2018=HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018
real(c_double), protected, public, bind(C,name="U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018") :: &
capi_U_139_2018=U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO_2018

real(real64), parameter, public :: HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018=-2.127625307d0 !! 
real(real64), parameter, public :: U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018=0.000000025d0 !! 

real(c_double), protected, public, bind(C,name="HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018"):: &
capi_140_2018=HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018
real(c_double), protected, public, bind(C,name="U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018") :: &
capi_U_140_2018=U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO_2018

real(real64), parameter, public :: HELION_MASS_2018=5.0064127796d-27 !! kg
real(real64), parameter, public :: U_HELION_MASS_2018=0.0000000015d-27 !! kg

real(c_double), protected, public, bind(C,name="HELION_MASS_2018"):: &
capi_141_2018=HELION_MASS_2018
real(c_double), protected, public, bind(C,name="U_HELION_MASS_2018") :: &
capi_U_141_2018=U_HELION_MASS_2018

real(real64), parameter, public :: HELION_MASS_ENERGY_EQUIVALENT_2018=4.4995394125d-10 !! J
real(real64), parameter, public :: U_HELION_MASS_ENERGY_EQUIVALENT_2018=0.0000000014d-10 !! J

real(c_double), protected, public, bind(C,name="HELION_MASS_ENERGY_EQUIVALENT_2018"):: &
capi_142_2018=HELION_MASS_ENERGY_EQUIVALENT_2018
real(c_double), protected, public, bind(C,name="U_HELION_MASS_ENERGY_EQUIVALENT_2018") :: &
capi_U_142_2018=U_HELION_MASS_ENERGY_EQUIVALENT_2018

real(real64), parameter, public :: HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=2808.39160743d0 !! MeV
real(real64), parameter, public :: U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018=0.00000085d0 !! MeV

real(c_double), protected, public, bind(C,name="HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018"):: &
capi_143_2018=HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018
real(c_double), protected, public, bind(C,name="U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018") :: &
capi_U_143_2018=U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV_2018

real(real64), parameter, public :: HELION_MASS_IN_U_2018=3.014932247175d0 !! u
real(real64), parameter, public :: U_HELION_MASS_IN_U_2018=0.000000000097d0 !! u

real(c_double), protected, public, bind(C,name="HELION_MASS_IN_U_2018"):: &
capi_144_2018=HELION_MASS_IN_U_2018
real(c_double), protected, public, bind(C,name="U_HELION_MASS_IN_U_2018") :: &
capi_U_144_2018=U_HELION_MASS_IN_U_2018

real(real64), parameter, public :: HELION_MOLAR_MASS_2018=3.01493224613d-3 !! kg mol^-1
real(real64), parameter, public :: U_HELION_MOLAR_MASS_2018=0.00000000091d-3 !! kg mol^-1

real(c_double), protected, public, bind(C,name="HELION_MOLAR_MASS_2018"):: &
capi_145_2018=HELION_MOLAR_MASS_2018
real(c_double), protected, public, bind(C,name="U_HELION_MOLAR_MASS_2018") :: &
capi_U_145_2018=U_HELION_MOLAR_MASS_2018

real(real64), parameter, public :: HELION_PROTON_MASS_RATIO_2018=2.99315267167d0 !! 
real(real64), parameter, public :: U_HELION_PROTON_MASS_RATIO_2018=0.00000000013d0 !! 

real(c_double), protected, public, bind(C,name="HELION_PROTON_MASS_RATIO_2018"):: &
capi_146_2018=HELION_PROTON_MASS_RATIO_2018
real(c_double), protected, public, bind(C,name="U_HELION_PROTON_MASS_RATIO_2018") :: &
capi_U_146_2018=U_HELION_PROTON_MASS_RATIO_2018

real(real64), parameter, public :: HELION_RELATIVE_ATOMIC_MASS_2018=3.014932247175d0 !! 
real(real64), parameter, public :: U_HELION_RELATIVE_ATOMIC_MASS_2018=0.000000000097d0 !! 

real(c_double), protected, public, bind(C,name="HELION_RELATIVE_ATOMIC_MASS_2018"):: &
capi_147_2018=HELION_RELATIVE_ATOMIC_MASS_2018
real(c_double), protected, public, bind(C,name="U_HELION_RELATIVE_ATOMIC_MASS_2018") :: &
capi_U_147_2018=U_HELION_RELATIVE_ATOMIC_MASS_2018

real(real64), parameter, public :: HELION_SHIELDING_SHIFT_2018=5.996743d-5 !! 
real(real64), parameter, public :: U_HELION_SHIELDING_SHIFT_2018=0.000010d-5 !! 

real(c_double), protected, public, bind(C,name="HELION_SHIELDING_SHIFT_2018"):: &
capi_148_2018=HELION_SHIELDING_SHIFT_2018
real(c_double), protected, public, bind(C,name="U_HELION_SHIELDING_SHIFT_2018") :: &
capi_U_148_2018=U_HELION_SHIELDING_SHIFT_2018

real(real64), parameter, public :: HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=4.4398216652d-24 !! u
real(real64), parameter, public :: U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018=0.0000000013d-24 !! u

real(c_double), protected, public, bind(C,name="HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018"):: &
capi_149_2018=HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018") :: &
capi_U_149_2018=U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP_2018

real(real64), parameter, public :: HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018=4.135667696d-15 !! eV
real(real64), parameter, public :: U_HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018=0.0d0 !! eV

real(c_double), protected, public, bind(C,name="HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018"):: &
capi_150_2018=HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018") :: &
capi_U_150_2018=U_HERTZ_ELECTRON_VOLT_RELATIONSHIP_2018

real(real64), parameter, public :: HERTZ_HARTREE_RELATIONSHIP_2018=1.5198298460570d-16 !! E_h
real(real64), parameter, public :: U_HERTZ_HARTREE_RELATIONSHIP_2018=0.0000000000029d-16 !! E_h

real(c_double), protected, public, bind(C,name="HERTZ_HARTREE_RELATIONSHIP_2018"):: &
capi_151_2018=HERTZ_HARTREE_RELATIONSHIP_2018
real(c_double), protected, public, bind(C,name="U_HERTZ_HARTREE_RELATIONSHIP_2018") :: &
capi_U_151_2018=U_HERTZ_HARTREE_RELATIONSHIP_2018

real(real64), parameter, public :: HERTZ_INVERSE_METER_RELATIONSHIP_2018=3.335640951d-9 !! m^-1
real(real64), parameter, public :: U_HERTZ_INVERSE_METER_RELATIONSHIP_2018=0.0d0 !! m^-1
